Wordsmith journalistic witness use case

--- a/index.html
+++ b/index.html
@@ -319,8 +319,9 @@ content history to other services.
           <dt>Journalism Witnessing</dt>
           <dd>
 Georg is a journalist that archives media from a variety of news outlets and
-would like to provide a witnessing service to prove when certain events
-happened in history.
+would like to provide a witnessing service to prove precisely when certain 
+publication and redaction events happened across various forms of digital
+publishing.
           </dd>
         </dl>
       </section>
